# tdah-mvp

./: .gitignore  README.md  docker-compose.yml  dockerfile  main.py  pyproject.toml
app/: main.py
app/database/: check.py  db.py  init_db.py  models.py  test_connection.py  test_pg.py  test_psycopg3.py  test_socket.py
app/pages/: 00_registro.py  01_test.py  02_resultado.py  03_dashboard.py  04_admin_login.py  05_admin_panel.py  06_participants.py  07_evaluations.py  08_settings.py
app/scripts/: create_admin.py  create_settings_table.py  seed_settings.py  test_login.py
app/services/: auth_service.py  dashboard_service.py  email_service.py  evaluation_dashboard_service.py  evaluation_service.py  participant_dashboard_service.py  participant_service.py  pdf_service.py  questions.py  scoring.py  security_service.py  settings_service.py  statistics_service.py
app/utils/: charts.py
tests/: conftest.py  test_email.py  test_evaluation.py  test_participant.py  test_pdf.py  test_scoring.py
