[project]
name = "tdah-mvp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "reportlab>=5.0.0",
    "sqlalchemy>=2.0.51",
    "streamlit>=1.58.0",
]
